--- a/style/style.css
+++ b/style/style.css
@@ -307,3 +307,57 @@ button {
 .hero img {
   border-radius: 12px;
 }
+
+/*******************\
+    Feature 
+\*******************/
+.feature {
+  padding-bottom: 6rem;
+  border-bottom: 1px solid #d0dcd9;
+}
+.feature__heading {
+  text-align: center;
+  font-family: "Nunito", sans-serif;
+  font-weight: 800;
+  font-size: 3rem;
+  line-height: 120%;
+  letter-spacing: -2px;
+  color: #163a34;
+  margin-bottom: 3rem;
+}
+.feature__grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(376px, 1fr));
+  gap: 2rem;
+}
+.feature__img-box {
+  width: 3.75rem;
+  height: 3.75rem;
+  background-color: #fff;
+  border-radius: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 1.5rem;
+}
+
+/*******************\
+    Text box 
+\*******************/
+.text-box__heading {
+  font-family: "Nunito", sans-serif;
+  font-weight: 700;
+  font-size: 2rem;
+  line-height: 130%;
+  letter-spacing: -1px;
+  color: #163a34;
+  margin-bottom: 0.75rem;
+}
+.text-box__text {
+  font-family: "Nunito", sans-serif;
+  font-weight: 500;
+  font-size: 1.25rem;
+  line-height: 150%;
+  letter-spacing: -0.4px;
+  color: #395852;
+}
