Finish home page

--- a/scss/_btn.scss
+++ b/scss/_btn.scss
@@ -7,19 +7,21 @@
 
 .btn {
   @include Nunito-B-20-140;
-  background-color: $col-neutral-600;
+  background-color: $col-neutral-900;
   color: $col-white;
   padding: 0.75rem 1rem;
   border-radius: $br-10;
 
-  &:active {
-    background-color: $col-neutral-900;
+  &:active,
+  &:hover {
+    background-color: $col-neutral-600;
   }
 
   &:focus {
     outline: 3px solid $col-neutral-900;
     outline-offset: 3px;
   }
+
   &--big {
     padding: 1rem 2rem;
   }
