--- a/style/style.css
+++ b/style/style.css
@@ -73,13 +73,35 @@ button {
   max-width: 74.5rem;
   margin-inline: auto;
 }
+@media (max-width: 850px) {
+  .container {
+    max-width: 48rem;
+    padding: 0 2rem;
+  }
+}
+@media (max-width: 450px) {
+  .container {
+    max-width: 23.4375rem;
+    padding: 0 1rem;
+  }
+}
 
 .hide__desktop {
   display: none;
 }
+@media (max-width: 850px) {
+  .hide__desktop {
+    display: block;
+  }
+}
 
 .hide__mobile {
-  display: none;
+  display: block;
+}
+@media (max-width: 850px) {
+  .hide__mobile {
+    display: none;
+  }
 }
 
 /*******************\
@@ -92,9 +114,15 @@ button {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  border-bottom: 1px solid #e0e6e3;
 }
 .header__logo {
   flex: 1;
+}
+@media (max-width: 850px) {
+  .header__logo {
+    flex: none;
+  }
 }
 .header__nav {
   display: flex;
@@ -164,6 +192,7 @@ button {
   .open.nav {
     right: 2.5rem;
     display: flex;
+    z-index: 9999;
   }
 }
 @media (max-width: 850px) and (max-width: 450px) {
@@ -209,13 +238,13 @@ button {
   font-size: 1.25rem;
   line-height: 130%;
   letter-spacing: -0.5px;
-  background-color: #395852;
+  background-color: #163a34;
   color: #fff;
   padding: 0.75rem 1rem;
   border-radius: 10px;
 }
-.btn:active {
-  background-color: #163a34;
+.btn:active, .btn:hover {
+  background-color: #395852;
 }
 .btn:focus {
   outline: 3px solid #163a34;
@@ -223,6 +252,143 @@ button {
 }
 .btn--big {
   padding: 1rem 2rem;
+}
+
+/*******************\
+    Cta
+\*******************/
+.cta {
+  background-color: #e0e6e3;
+  border-radius: 16px;
+  padding: 6rem 0;
+  position: relative;
+  overflow: hidden;
+}
+@media (max-width: 850px) {
+  .cta {
+    padding: 5rem 0;
+  }
+}
+@media (max-width: 450px) {
+  .cta {
+    padding: 3rem 1rem;
+  }
+}
+.cta::before {
+  position: absolute;
+  content: url(../assets/images/pattern-fork.svg);
+  /* Illustration, copied values from figma  */
+  width: 314.67px;
+  height: 390.23px;
+  left: -73px;
+  top: 23px;
+  display: inline-block;
+}
+@media (max-width: 850px) {
+  .cta::before {
+    transform: scale(0.5);
+    left: -100px;
+    top: 75px;
+  }
+}
+@media (max-width: 450px) {
+  .cta::before {
+    display: none;
+  }
+}
+.cta::after {
+  position: absolute;
+  content: url(../assets/images/pattern-knife.svg);
+  /* Illustration */
+  position: absolute;
+  width: 338.43px;
+  height: 338.43px;
+  right: -54px;
+  top: 24px;
+}
+@media (max-width: 850px) {
+  .cta::after {
+    transform: scale(0.5);
+    right: -100px;
+    top: -135px;
+  }
+}
+@media (max-width: 450px) {
+  .cta::after {
+    display: none;
+  }
+}
+.cta__content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  z-index: 9;
+}
+@media (max-width: 450px) {
+  .cta__content {
+    text-align: center;
+  }
+}
+.cta__heading {
+  font-family: "Nunito", sans-serif;
+  font-weight: 800;
+  font-size: 3rem;
+  line-height: 120%;
+  letter-spacing: -2px;
+  color: #163a34;
+  margin-bottom: 0.75rem;
+}
+@media (max-width: 450px) {
+  .cta__heading {
+    font-family: "Nunito", sans-serif;
+    font-weight: 800;
+    font-size: 2.5rem;
+    line-height: 120%;
+    letter-spacing: -2px;
+  }
+}
+.cta__text {
+  font-family: "Nunito", sans-serif;
+  font-weight: 500;
+  font-size: 1.25rem;
+  line-height: 150%;
+  letter-spacing: -0.4px;
+  color: #395852;
+  margin-bottom: 2.5rem;
+}
+@media (max-width: 450px) {
+  .cta__text {
+    margin-bottom: 2rem;
+  }
+}
+
+/*******************\
+    Footer
+\*******************/
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2.5rem 0;
+}
+@media (max-width: 450px) {
+  .footer {
+    flex-direction: column-reverse;
+    row-gap: 2rem;
+  }
+}
+.footer__text {
+  font-family: "Nunito", sans-serif;
+  font-weight: 500;
+  font-size: 1rem;
+  line-height: 150%;
+  letter-spacing: -0.3px;
+  color: #163a34;
+}
+.footer__links {
+  display: flex;
+  column-gap: 1.5rem;
 }
 
 /*******************\
@@ -238,6 +404,16 @@ button {
             and i dont know how to do this properly  🫣
   \*******************/
   position: relative;
+}
+@media (max-width: 850px) {
+  .hero {
+    padding: 3rem 0 5rem;
+  }
+}
+@media (max-width: 450px) {
+  .hero {
+    padding: 3rem 0 4rem;
+  }
 }
 .hero__inner {
   /*******************\
@@ -263,6 +439,13 @@ button {
   align-items: center;
   margin-bottom: 5rem;
 }
+@media (max-width: 850px) {
+  .hero__content {
+    align-items: flex-start;
+    text-align: left;
+    margin-bottom: 2.5rem;
+  }
+}
 .hero__heading {
   font-family: "Nunito", sans-serif;
   font-weight: 800;
@@ -274,6 +457,26 @@ button {
   /*******************\
       Make orange background first word
   \*******************/
+}
+@media (max-width: 850px) {
+  .hero__heading {
+    font-family: "Nunito", sans-serif;
+    font-weight: 800;
+    font-size: 4rem;
+    line-height: 110%;
+    letter-spacing: -2px;
+    margin-bottom: 1rem;
+  }
+}
+@media (max-width: 450px) {
+  .hero__heading {
+    font-family: "Nunito", sans-serif;
+    font-weight: 800;
+    font-size: 3.25rem;
+    line-height: 110%;
+    letter-spacing: -2px;
+    margin-bottom: 1rem;
+  }
 }
 .hero__heading span {
   position: relative;
@@ -299,6 +502,16 @@ button {
   margin-bottom: 2.5rem;
   max-width: 36.25rem;
 }
+@media (max-width: 850px) {
+  .hero__text {
+    max-width: none;
+  }
+}
+@media (max-width: 450px) {
+  .hero__text {
+    margin-bottom: 2rem;
+  }
+}
 .hero__imgs {
   padding: 12px;
   background-color: #fff;
@@ -315,6 +528,12 @@ button {
   padding-bottom: 6rem;
   border-bottom: 1px solid #d0dcd9;
 }
+@media (max-width: 450px) {
+  .feature {
+    padding-bottom: 0;
+    border-bottom: none;
+  }
+}
 .feature__heading {
   text-align: center;
   font-family: "Nunito", sans-serif;
@@ -325,10 +544,31 @@ button {
   color: #163a34;
   margin-bottom: 3rem;
 }
+@media (max-width: 850px) {
+  .feature__heading {
+    text-align: left;
+  }
+}
+@media (max-width: 450px) {
+  .feature__heading {
+    font-family: "Nunito", sans-serif;
+    font-weight: 800;
+    font-size: 2.5rem;
+    line-height: 120%;
+    letter-spacing: -2px;
+    margin-bottom: 2rem;
+  }
+}
 .feature__grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(376px, 1fr));
   gap: 2rem;
+}
+@media (max-width: 450px) {
+  .feature__grid {
+    grid-template-columns: 1fr;
+    gap: 1.5rem;
+  }
 }
 .feature__img-box {
   width: 3.75rem;
@@ -339,6 +579,11 @@ button {
   align-items: center;
   justify-content: center;
   margin-bottom: 1.5rem;
+}
+@media (max-width: 450px) {
+  .feature__img-box {
+    margin-bottom: 1.25rem;
+  }
 }
 
 /*******************\
@@ -360,4 +605,84 @@ button {
   line-height: 150%;
   letter-spacing: -0.4px;
   color: #395852;
+}
+
+/*******************\
+    Real life 
+\*******************/
+.real-life {
+  padding: 6rem 0;
+  display: flex;
+  column-gap: 3rem;
+  align-items: center;
+}
+@media (max-width: 850px) {
+  .real-life {
+    flex-direction: column;
+    row-gap: 2.5rem;
+  }
+}
+@media (max-width: 450px) {
+  .real-life {
+    padding: 4rem 1rem;
+  }
+}
+.real-life__content {
+  flex: 0 0 509px;
+}
+@media (max-width: 850px) {
+  .real-life__content {
+    flex: 1;
+  }
+}
+.real-life__heading {
+  font-family: "Nunito", sans-serif;
+  font-weight: 800;
+  font-size: 3rem;
+  line-height: 120%;
+  letter-spacing: -2px;
+  color: #163a34;
+  margin-bottom: 1.25rem;
+}
+@media (max-width: 450px) {
+  .real-life__heading {
+    font-family: "Nunito", sans-serif;
+    font-weight: 800;
+    font-size: 2.5rem;
+    line-height: 120%;
+    letter-spacing: -2px;
+  }
+}
+.real-life__text:first-of-type:has(+ .real-life__text) {
+  margin-bottom: 1.25rem;
+}
+.real-life__text {
+  font-family: "Nunito", sans-serif;
+  font-weight: 500;
+  font-size: 1.25rem;
+  line-height: 150%;
+  letter-spacing: -0.4px;
+  color: #395852;
+}
+.real-life__text span {
+  position: relative;
+}
+.real-life__text span::after {
+  content: "";
+  position: absolute;
+  width: 102px;
+  height: 12px;
+  left: -2px;
+  top: 10px;
+  background: #fe9f6b;
+  border-radius: 3px;
+  z-index: -1;
+}
+@media (max-width: 650px) {
+  .real-life__text span::after {
+    display: none;
+  }
+}
+.real-life__img > * {
+  border-radius: 16px;
 }
