--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -10,10 +10,14 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    border-bottom: 1px solid $col-neutral-200;
   }
 
   &__logo {
     flex: 1;
+    @media (max-width: 850px) {
+      flex: none;
+    }
   }
   &__nav {
     display: flex;
