--- a/scss/home/_feature.scss
+++ b/scss/home/_feature.scss
@@ -7,17 +7,33 @@
 .feature {
   padding-bottom: 6rem;
   border-bottom: 1px solid $col-neutral-300;
+
+  @media (max-width: 450px) {
+    padding-bottom: 0;
+    border-bottom: none;
+  }
   &__heading {
     text-align: center;
     @include Nunito-EB-48-120;
     color: $col-neutral-900;
     margin-bottom: 3rem;
+    @media (max-width: 850px) {
+      text-align: left;
+    }
+    @media (max-width: 450px) {
+      @include Nunito-EB-40-120;
+      margin-bottom: 2rem;
+    }
   }
 
   &__grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(376px, 1fr));
     gap: 2rem;
+    @media (max-width: 450px) {
+      grid-template-columns: 1fr;
+      gap: 1.5rem;
+    }
   }
 
   &__img-box {
@@ -29,5 +45,8 @@
     align-items: center;
     justify-content: center;
     margin-bottom: 1.5rem;
+    @media (max-width: 450px) {
+      margin-bottom: 1.25rem;
+    }
   }
 }
