Finish about page

--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -15,6 +15,9 @@
   &__link:visited {
     @include Nunito-SB-18-150;
     color: $col-neutral-900;
+    @media (max-width: 850px) {
+      width: 100%;
+    }
   }
   &__active,
   &__link:hover,
