--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,3 +15,11 @@
 @use "home/feature";
 @use "home/text_box";
 @use "home/real-life";
+
+/*******************\
+    About page styles
+\*******************/
+
+@use "about/mission";
+@use "about/list";
+@use "about/beyond";
