--- a/style/style.css
+++ b/style/style.css
@@ -89,7 +89,7 @@ button {
 .hide__desktop {
   display: none;
 }
-@media (max-width: 850px) {
+@media (max-width: 450px) {
   .hide__desktop {
     display: block;
   }
@@ -98,7 +98,7 @@ button {
 .hide__mobile {
   display: block;
 }
-@media (max-width: 850px) {
+@media (max-width: 450px) {
   .hide__mobile {
     display: none;
   }
@@ -257,6 +257,15 @@ button {
 }
 .btn--big {
   padding: 1rem 2rem;
+}
+.btn--recipe {
+  font-family: "Nunito", sans-serif;
+  font-weight: 700;
+  font-size: 1rem;
+  line-height: 150%;
+  letter-spacing: -0.3px;
+  border-radius: 999px;
+  text-align: center;
 }
 
 /*******************\
@@ -941,4 +950,182 @@ button {
 }
 .beyond__img > * {
   border-radius: 20px;
+}
+
+/*******************\
+    Recipes page styles
+\*******************/
+/*******************\
+    Explore
+\*******************/
+.explore__inner {
+  max-width: 45.75rem;
+  margin-inline: auto;
+  padding: 5rem 0 4rem;
+  text-align: center;
+}
+@media (max-width: 850px) {
+  .explore__inner {
+    text-align: left;
+    padding: 4rem 0 3rem;
+  }
+}
+@media (max-width: 450px) {
+  .explore__inner {
+    padding: 3rem 0;
+  }
+}
+.explore__heading {
+  font-family: "Nunito", sans-serif;
+  font-weight: 800;
+  font-size: 3rem;
+  line-height: 120%;
+  letter-spacing: -2px;
+  color: #163a34;
+  margin-bottom: 0.75rem;
+}
+.explore__text {
+  font-family: "Nunito", sans-serif;
+  font-weight: 500;
+  font-size: 1.25rem;
+  line-height: 150%;
+  letter-spacing: -0.4px;
+  color: #395852;
+}
+
+/*******************\
+    Filters
+\*******************/
+.filters {
+  display: flex;
+  align-items: center;
+  column-gap: 1rem;
+}
+.filters__dropdown {
+  position: relative;
+}
+.filters__btn {
+  display: flex;
+  align-items: center;
+  column-gap: 8px;
+  padding: 0.625rem 1rem;
+  background-color: #fff;
+  border: 1px solid #e0e6e3;
+  border-radius: 10px;
+  font-family: "Nunito", sans-serif;
+  font-weight: 600;
+  font-size: 1.125rem;
+  line-height: 150%;
+  letter-spacing: -0.3px;
+  color: #163a34;
+}
+.filters__dropdown-menu {
+  background-color: #fff;
+  border: 1px solid #e0e6e3;
+  border-radius: 10px;
+  font-family: "Nunito", sans-serif;
+  font-weight: 600;
+  font-size: 1.125rem;
+  line-height: 150%;
+  letter-spacing: -0.3px;
+  color: #163a34;
+  display: flex;
+  flex-direction: column;
+  padding: 0.5rem;
+}
+.filters__dropdown-menu label {
+  padding: 0.5rem;
+}
+
+/*******************\
+    Recipes
+\*******************/
+.recipes__control {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+/*******************\
+    Meals
+\*******************/
+.meals {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(375px, 1fr));
+  align-items: center;
+  justify-items: center;
+  gap: 2rem;
+}
+@media (max-width: 850px) {
+  .meals {
+    grid-template-columns: 1fr;
+  }
+}
+.meals__card {
+  max-width: 23.5rem;
+  padding: 0.5rem;
+  background-color: #fff;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 1rem;
+}
+@media (max-width: 850px) {
+  .meals__card {
+    max-width: 44rem;
+  }
+}
+@media (max-width: 450px) {
+  .meals__card {
+    max-width: 21.4375rem;
+  }
+}
+.meals__img > * {
+  border-radius: 10px;
+}
+
+/*******************\
+    Info
+\*******************/
+.info__heading {
+  font-family: "Nunito", sans-serif;
+  font-weight: 700;
+  font-size: 1.25rem;
+  line-height: 130%;
+  letter-spacing: -0.5px;
+  color: #163a34;
+  margin-bottom: 0.625rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.info__text {
+  font-family: "Nunito", sans-serif;
+  font-weight: 500;
+  font-size: 1rem;
+  line-height: 150%;
+  letter-spacing: -0.3px;
+  color: #395852;
+}
+
+/*******************\
+    Details
+\*******************/
+.details {
+  display: flex;
+  align-items: center;
+  column-gap: 1.2rem;
+  row-gap: 8px;
+  flex-wrap: wrap;
+}
+.details__element {
+  display: flex;
+  align-items: center;
+  column-gap: 6px;
+  font-family: "Nunito", sans-serif;
+  font-weight: 500;
+  font-size: 1rem;
+  line-height: 150%;
+  letter-spacing: -0.3px;
+  color: #395852;
 }
